tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_001_unclosed_input_brace/expected.txt
error[PARSE004]: unmatched '{' in event shape
  --> tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_001_unclosed_input_brace/input.kz:4:1
    |
  4 | ~event write {
    | ^

